
2005/09/09: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added usage counters to GWEN_CryptKey and GWEN_CryptToken (to detect the
  case when an already freed object is still used)
- GWEN_Logger_ModuleInit() now uses the envrionment variable "GWEN_LOGLEVEL"
  to determine the initial loglevel for Gwen


2005-09-07   Christian Stimming <stimming@tuhh.de>

	* gwenhywfar.pc.in: Add configuration file for pkg-config, let
	this also be installed.


2005/09/07: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added functions
  - GWEN_DB_FindFirstVar()
  - GWEN_DB_FindNextVar()
- started working on HTTP session stuff
- added debug code to spot the problem with "size 96!=xx"


2005/09/06: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added property "chunkSize" to crypt keys
- fixed a memory leak in typemaker constructed code (_fromDb functions)


2005/09/05: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- OpenHBCI crypttoken: Reset password upon close()


2005-08-27  Christian Stimming  <stimming@tuhh.de>

	* src/crypt2/crypttoken.c, ct_file.c: Decrease verbosity in
	non-critical messages; increased verbosity in some error messages.


2005/08/27: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug (GWEN_DB_Node_Unlink was not setting parent to 0)


===========================================================================
MARK: released gwenhywfar-1.18.0 (2005/08/24)
===========================================================================


2005/08/24: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function GWEN_CryptToken_TransformPin()
- added encoding type FPIN2
- added an argument to GWEN_CryptToken_ChangePin: Pin type
  This is an API change, but so far only Gwen itself and Libchipcard2