@@ -1,4 +1,15 @@
 
+2005/09/28: Martin Preuss<martin@libchipcard.de>
+-------------------------------------------------
+- added function GWEN_IPCManager_GetClientForConnection()
+- added some more debugging to cryptssl_rsa.c
+
+ 
+2005/09/10: Martin Preuss<martin@libchipcard.de>
+-------------------------------------------------
+- added function GWEN_List_Remove() (and a corresponding list2 macro)
+
+
 2005/09/09: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
 - added usage counters to GWEN_CryptKey and GWEN_CryptToken (to detect the
